# SIMP

./: .env.example  .gitignore  .goosehints  AGENTS.md  ASI_EVOLVE_INTEGRATION_ANALYSIS.md  ASI_EVOLVE_INTEGRATION_COMPLETE.md  ASI_EVOLVE_PHASE1_IMPLEMENTATION.md  BILL_RUSSELL_PROTOCOL_FINAL_REPORT.md  BRP_ARSENAL_ENHANCEMENT_COMPLETE.md  BRP_COMMIT_EXECUTION_GUIDE.md  BRP_COMMIT_SUMMARY_REPORT.md  BRP_DEPLOYMENT_COMPLETE.md  BRP_DEPLOYMENT_FINAL.md  BRP_GIT_COMMIT_PLAN.md  BRP_INTEGRATION_SUMMARY.md  BRP_Technical_Appendix.md  COORDINATION_PROTOCOL.md  DECEPTICON_ANALYSIS_INTEGRATION.md  DECEPTICON_INTEGRATION_COMPLETE.md  ENHANCED_BRP_DEPLOYMENT_SUCCESS.md  ENHANCED_MESH_SYSTEM_COMPLETE.md  FINAL_MESH_UPGRADE_DELIVERABLES.md  FINAL_PHASE4_DELIVERABLES.md  FINAL_SECURITY_ASSESSMENT.md  FINAL_SYSTEM_ACTIVATION_REPORT.md  GATE1_MID_SESSION_SUMMARY.md  GATE2_COMPLETE_SUMMARY.md  GATE_1_OPERATIONAL_READY.md  GIT_COMMIT_SUMMARY.md  KLOUTBOT_ACTIVATION_MAP.md  KLOUTBOT_KERNEL.md  KLOWNETWORK_SEEDING_SUMMARY.md  MESH_BUS_COMPLETION_SUMMARY.md  MESH_BUS_PHASE2_COMPLETE.md  MESH_ENHANCEMENT_COMPLETE_SUMMARY.md  MESH_ENHANCEMENT_PLAN.md  MESH_PROTOCOL_COMPLETE.md  MESH_UPGRADE_FINAL_DOCUMENTATION.md  MESH_UPGRADE_INTEGRATION_PLAN.md  MESH_UPGRADE_SUMMARY_REPORT.md  (+276 more)
.graphify/: AGENT_INTEGRATION_GUIDE.md  README.md  STEP2_COMPLETE_SUMMARY.md  analysis.json  test_map.json
.security/: security_baseline.json
agents/: __init__.py  deerflow_agent.py  deerflow_agent_fixed.py  deerflow_agent_fixed_v2.py  gate3_5_enhanced_agent.py  gate4_scaled_agent_part1.py  gate4_scaled_agent_part2a.py  gate4_scaled_agent_part2b.py  gate4_scaled_agent_part3.py  gate4_scaled_microscopic_agent.py
bill_russel_data_acquisition/: dataset_processor.py  web_scraper.py
bill_russel_integration/: integration_system.py
bill_russel_ml_pipeline/: training_pipeline.py
bill_russel_sigma_rules/: sigma_engine.py
briefs/: architecture_brief_20260411_143520.html  architecture_brief_20260411_143520.json  architecture_brief_20260411_143520.md  architecture_brief_20260411_143744.json  architecture_brief_20260411_143744.md  architecture_brief_20260411_143841.html  architecture_brief_20260411_143841.json  architecture_brief_20260411_143841.md  architecture_brief_20260411_143841_with_compliance.json
brp_enhancement/: .gitignore  BRP_ENHANCEMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  README.md  brp_service.py  demo_brp_enhancement.py  start_brp.sh  (+1 more)
simp/: config.py  (+9 more)
(+2537 files in other folders)
